--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=bookingSystem
 server.port=8081
-spring.data.mongodb.uri=mongodb+srv://egonzalez2019065:%3Cdb_password%3E@clouster-ada.56lix.mongodb.net/?retryWrites=true&w=majority&appName=Clouster-ADA
+spring.data.mongodb.uri=mongodb+srv://egonzalez2019065:sZSiSB2i3AXySKoQ@clouster-ada.56lix.mongodb.net/ada-test?retryWrites=true&w=majority&appName=Clouster-ADA
