--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.3.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>bookingSystem</artifactId>
+	<groupId>com.alexandergonzalez</groupId>
+	<artifactId>miTienditaSystem</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bookingSystem</name>
 	<description>Creación de proyecto integrador</description>
@@ -30,6 +30,12 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>6.3.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
