Base de datos especifícada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=miTienditaSystem
 server.port=8081
 spring.data.mongodb.uri=mongodb+srv://egonzalez2019065:sZSiSB2i3AXySKoQ@clouster-ada.56lix.mongodb.net/ada-test?retryWrites=true&w=majority&appName=Clouster-ADA
+spring.data.mongodb.database=mi_tiendita_system
